--- a/news.html
+++ b/news.html
@@ -56,9 +56,9 @@
       <h1>
         News
       </h1>
-      <div class="d-md-flex flex-row justify-content-md-around">
+      <div class="d-flex flex-row justify-content-md-around">
         <div class="card news-card">
-          <img class="card-img-top" src="images/The Neighbourhood news.jpg" alt="News">
+          <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
           <div class="card-body">
             <h5 class="card-title">News title</h5>
             <p class="card-text">
@@ -67,7 +67,7 @@
           </div>
         </div><br>
         <div class="card news-card">
-          <img class="card-img-top" src="images/The Neighbourhood news.jpg" alt="News">
+          <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
           <div class="card-body">
             <h5 class="card-title">News title</h5>
             <p class="card-text">
@@ -76,7 +76,7 @@
           </div>
         </div><br>
         <div class="card news-card">
-          <img class="card-img-top" src="images/The Neighbourhood news.jpg" alt="News">
+          <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
           <div class="card-body">
             <h5 class="card-title">News title</h5>
             <p class="card-text">
