Lab8 - working with localStorage

--- a/fans_appeal.html
+++ b/fans_appeal.html
@@ -106,7 +106,7 @@
       <hr class="fans-appeal">
       <h3>Leave your appeal</h3>
       <section class="d-flex justify-content-center align-items-end appeal-form">
-        <button type="submit" class="btn btn-dark fans-submit" onclick="publishFansAppeal()">Send</button>
+        <button type="submit" class="btn btn-dark fans-submit" onclick="sendAppeal()">Send</button>
         <textarea name="fans-appeal" id="appeal" rows="8" cols="60" placeholder="Write an appeal..." class="form-control" style="width: 500px;"></textarea>
       </section>
     </main>
