--- a/admin.html
+++ b/admin.html
@@ -60,15 +60,15 @@
       </h1>
       <section>
         <div class="admin-flex m-3">
-          <img src="images/noimage-md.png" alt="No image" class="float-left">
-          <input type="file" name="image" class="form-control-file" style="width:300px; max-width: 100%;">
+          <img src="images/noimage-md.png" style="max-height: 200px;" alt="No image" class="float-left" id="preview">
+          <input type="file" name="image" class="form-control-file" style="width:300px; max-width: 100%;" onchange="imagePreview()">
         </div>
         <div class="admin-flex m-3">
           <div class="">
             <input type="text" id="news-title"name="title" size="100" placeholder="News title" class="form-control"><br>
             <textarea name="text" id="news-body" rows="15" cols="103" placeholder="News body" class="form-control"></textarea>
           </div>
-          <button type="submit" class="btn btn-dark mr-3" onclick="publishNews()">Publish</button>
+          <button type="submit" class="btn btn-dark mr-3" onclick="sentNews()">Publish</button>
         </div>
       </section>
     </main>
