--- a/news.html
+++ b/news.html
@@ -10,6 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+    <script src="js/news.js">
+
+    </script>
+
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
@@ -56,7 +60,7 @@
       <h1>
         News
       </h1>
-      <div class="d-flex flex-row justify-content-md-around">
+      <div class="d-flex justify-content-around flex-row flex-wrap" id="news">
         <div class="card news-card">
           <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
           <div class="card-body">
@@ -65,7 +69,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
-        </div><br>
+        </div>
         <div class="card news-card">
           <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
           <div class="card-body">
@@ -74,7 +78,25 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
-        </div><br>
+        </div>
+        <div class="card news-card">
+          <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
+          <div class="card-body">
+            <h5 class="card-title">News title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </div>
+        <div class="card news-card">
+          <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
+          <div class="card-body">
+            <h5 class="card-title">News title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </div>
         <div class="card news-card">
           <img class="card-img-top" src="images/The_Neighbourhood_news.jpg" alt="News">
           <div class="card-body">
