--- a/fans_appeal.html
+++ b/fans_appeal.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+    <script src="js/db.js"></script>
     <script src="js/fans_appeal.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
